--- a/etc/skel/.config/qt5ct/qt5ct.conf
+++ b/etc/skel/.config/qt5ct/qt5ct.conf
@@ -1,7 +1,7 @@
 [Appearance]
 color_scheme_path=/usr/share/qt5ct/colors/airy.conf
 custom_palette=false
-icon_theme=Sardi-Mono-Colora
+icon_theme=Sardi-Arc
 standard_dialogs=default
 style=kvantum-dark
 
