--- a/etc/skel/.config/qt5ct/qt5ct.conf
+++ b/etc/skel/.config/qt5ct/qt5ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/usr/share/qt5ct/colors/airy.conf
 custom_palette=false
 icon_theme=Sardi-Arc
-standard_dialogs=default
+standard_dialogs=kde
 style=Breeze
 
 [Fonts]
